--- a/k8s/tf_pod.yaml
+++ b/k8s/tf_pod.yaml
@@ -7,16 +7,21 @@ spec:
     - name: terraform
       image: hashicorp/terraform:1.6.2 
       volumeMounts:
-        - name: gcp-credentials
+        - name: gcp-credentials-volume
           mountPath: /var/secrets/gcp
           readOnly: true
       env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /var/secrets/gcp/key.json  # Path to the credentials file inside the pod
-      #workingDir: /abridge-test/terraform  # Adjusted working directory
-      command: ["sh", "-c", "apk add --no-cache git && git clone https://github.com/hamid659/abridge-test.git /abridge-test && cd /abridge-test/terraform && terraform init && tail -f /dev/null"]
-      # This will keep the container running
+          value: /var/secrets/gcp/gcp-credentials.json # Path to the credentials file inside the pod
+      command: ["/bin/sh", "-c"]
+      args:
+        - |
+          apk add --no-cache git && \
+          git clone https://github.com/hamid659/abridge-test.git /abridge-test && \
+          cd /abridge-test/terraform && terraform init && \
+          cd /abridge-test/terraform &&  terraform plan -var-file=./environments/dev.tfvars -out=/var/log/terraform/plan.log && \
+          tail -f /dev/null
   volumes:
-    - name: gcp-credentials
+    - name: gcp-credentials-volume
       secret:
-        secretName: gcp-credentials  # Name of the secret created earlier
+        secretName: gcp-credentials-secret
