--- a/k8s/tf_pod.yaml
+++ b/k8s/tf_pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: terraform
-      image: hashicorp/terraform:1.6.2 
+      image: hamid659/terraform-gcloud:1.6.0
       volumeMounts:
         - name: gcp-credentials-volume
           mountPath: /var/secrets/gcp
@@ -13,6 +13,8 @@ spec:
       env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /var/secrets/gcp/gcp-credentials.json # Path to the credentials file inside the pod
+        - name: PROJECT_ID
+          value: "${PROJECT_ID}"  # Placeholder to be replaced at runtime
         - name: COMMAND
           value: "plan"  # Default value, can be overridden
         - name: TFVARS_PATH
@@ -20,7 +22,6 @@ spec:
       command: ["/bin/sh", "-c"]
       args:
         - |
-          apk add --no-cache git && \
           git clone https://github.com/hamid659/abridge-test.git /abridge-test && \
           cd /abridge-test/scripts && \
           chmod +x run_terraform.sh && \
